feat(admin): add references endpoint for forms
